crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_u64.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign_bitand(a: u64, b: u64) -> u64 {\n        a &= b;\n        a\n    }\n    public func assign_bitor(a: u64, b: u64) -> u64 {\n        a |= b;\n        a\n    }\n    public func assign_bitxor(a: u64, b: u64) -> u64 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_bitand(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %bit_and = and i64 %1, %0
  ret i64 %bit_and
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_bitor(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %bit_or = or i64 %1, %0
  ret i64 %bit_or
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_bitxor(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %bit_xor = xor i64 %1, %0
  ret i64 %bit_xor
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
