crates/codira_codegen/src/snapshots/codira_codegen__test__assign_shift_op_i16.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign_leftshift(a: i16, b: i16) -> i16 {\n        a <<= b;\n        a\n    }\n    public func assign_rightshift(a: i16, b: i16) -> i16 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i16 @assign_leftshift(i16 %0, i16 %1) local_unnamed_addr #0 {
body:
  %left_shift = shl i16 %0, %1
  ret i16 %left_shift
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i16 @assign_rightshift(i16 %0, i16 %1) local_unnamed_addr #0 {
body:
  %right_shift = ashr i16 %0, %1
  ret i16 %right_shift
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
