crates/codira_codegen/src/snapshots/codira_codegen__test__assign_shift_op_i64.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func assign_leftshift(a: i64, b: i64) -> i64 {\n        a <<= b;\n        a\n    }\n    public func assign_rightshift(a: i64, b: i64) -> i64 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_leftshift(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %left_shift = shl i64 %0, %1
  ret i64 %left_shift
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @assign_rightshift(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %right_shift = ashr i64 %0, %1
  ret i64 %right_shift
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
